# Al-dente-fasta

./: LICENSE.txt  README.md  aldente_fasta.py  benchmarks.txt  pyproject.toml  readme.txt  requirements.txt  tile_seqs.py
Aldente_Fasta/: __init__.py  aldente_fasta.py  counts_graphs.py  ntd_bases.py  preprocess.py  tile_seqs.py
